--- a/src/main/resources/com/xen/oslab/os-view.fxml
+++ b/src/main/resources/com/xen/oslab/os-view.fxml
@@ -4,10 +4,10 @@
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.xen.oslab.OSController">
    <center>
-       <Pane fx:id="desktopPane" style="-fx-background-color: transparent;" BorderPane.alignment="CENTER" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" />
+       <Pane fx:id="desktopPane" style="-fx-background-color: #222831; transparent;" BorderPane.alignment="CENTER" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" />
 
    </center>
    <bottom>
-      <HBox alignment="BOTTOM_LEFT" prefHeight="50.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
+      <HBox alignment="BOTTOM_LEFT" style="-fx-background-color: #222222;" prefHeight="50.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
    </bottom>
 </BorderPane>
