--- a/src/main/resources/com/xen/oslab/log-in.fxml
+++ b/src/main/resources/com/xen/oslab/log-in.fxml
@@ -6,43 +6,43 @@
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane xmlns="http://javafx.com/javafx/17.0.12"
+<AnchorPane xmlns="http://javafx.com/javafx/17.0.12"
             xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="com.xen.oslab.managers.LoginManager">
 
-    <center>
-        <StackPane fx:id="desktopPane">
+    <!-- Background -->
+    <ImageView fx:id="bgImageView" preserveRatio="false"
+               fitWidth="1920" fitHeight="1080" AnchorPane.topAnchor="0" AnchorPane.leftAnchor="0"
+               AnchorPane.rightAnchor="0" AnchorPane.bottomAnchor="0">
+        <effect>
+            <GaussianBlur radius="8"/>
+        </effect>
+    </ImageView>
 
-            <ImageView fx:id="bgImageView" preserveRatio="false">
-                <effect>
-                    <GaussianBlur radius="8"/>
-                </effect>
-            </ImageView>
+    <!-- Login Form centered -->
+    <VBox alignment="CENTER" spacing="20.0"
+          style="-fx-background-color: rgba(0,0,0,0.6); -fx-background-radius: 10; -fx-padding: 40;"
+          AnchorPane.topAnchor="0" AnchorPane.bottomAnchor="0"
+          AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0">
+        <Label fx:id="userLabel" text="Welcome, user"
+               style="-fx-text-fill: white; -fx-font-size: 26; -fx-font-weight: bold;"/>
+        <PasswordField fx:id="passwordField" promptText="Enter password" maxWidth="350" prefHeight="40"
+                       style="-fx-font-size: 18;"/>
+        <Button text="Sign In" onAction="#handleLogin" maxWidth="350" prefHeight="40"
+                style="-fx-font-size: 18;"/>
+        <Button text="Sign Up" onAction="#handleSignUp" maxWidth="350" prefHeight="40"
+                style="-fx-font-size: 18; -fx-background-color: #3b82f6; -fx-text-fill: white;"/>
+    </VBox>
 
-            <VBox alignment="CENTER" spacing="20.0"
-                  style="-fx-background-color: rgba(0,0,0,0.6); -fx-background-radius: 10; -fx-padding: 40;">
-                <Label fx:id="userLabel" text="Welcome, user"
-                       style="-fx-text-fill: white; -fx-font-size: 26; -fx-font-weight: bold;"/>
-                <PasswordField fx:id="passwordField" promptText="Enter password" maxWidth="350" prefHeight="40"
-                               style="-fx-font-size: 18;"/>
-                <Button text="Sign In" onAction="#handleLogin" maxWidth="350" prefHeight="40"
-                        style="-fx-font-size: 18;"/>
-                <Button text="Sign Up" onAction="#handleSignUp" maxWidth="350" prefHeight="40"
-                        style="-fx-font-size: 18; -fx-background-color: #3b82f6; -fx-text-fill: white;"/>
-            </VBox>
+    <!-- User List anchored top-right -->
+    <VBox alignment="TOP_CENTER" spacing="10.0"
+          style="-fx-background-color: rgba(0,0,0,0.5); -fx-background-radius: 15; -fx-padding: 20;"
+          AnchorPane.topAnchor="100" AnchorPane.rightAnchor="250" maxWidth="250" minWidth="200">
+        <Label text="Select User" style="-fx-text-fill: white; -fx-font-size: 18; -fx-font-weight: bold;"/>
+        <ListView fx:id="userListView"
+                  maxWidth="230" minWidth="200" maxHeight="400"
+                  style="-fx-background-color: rgba(255,255,255,0.05); -fx-control-inner-background: rgba(0,0,0,0.2); -fx-text-fill: white; -fx-font-size: 16;"/>
+    </VBox>
 
+</AnchorPane>
 
-            <VBox alignment="TOP_CENTER" spacing="10.0" 
-                  style="-fx-background-color: rgba(0,0,0,0.5); -fx-background-radius: 15; -fx-padding: 20;"
-                  StackPane.alignment="CENTER_RIGHT" maxWidth="250" minWidth="200">
-                <Label text="Select User" style="-fx-text-fill: white; -fx-font-size: 18; -fx-font-weight: bold;"/>
-                <ListView fx:id="userListView" 
-                          maxWidth="230" minWidth="200" maxHeight="400"
-                          style="-fx-background-color: rgba(255,255,255,0.05); -fx-control-inner-background: rgba(0,0,0,0.2); -fx-text-fill: white; -fx-font-size: 16;">
-                </ListView>
-            </VBox>
-
-        </StackPane>
-    </center>
-
-</BorderPane>
