--- a/src/main/resources/com/xen/oslab/sign-up.fxml
+++ b/src/main/resources/com/xen/oslab/sign-up.fxml
@@ -38,6 +38,11 @@
     <Button text="Sign Up" onAction="#handleSignUp" maxWidth="400" prefHeight="40"
             style="-fx-font-size: 18; -fx-background-color: #3b82f6; -fx-text-fill: white;"/>
             
+    <Button text="Return"
+        onAction="#handleReturn"
+        maxWidth="400" prefHeight="40"
+        style="-fx-font-size: 18; -fx-background-color: #6b7280; -fx-text-fill: white;"/>
+
 </VBox>
 
 
